Fixed mobile navbar jumping to top of the page when pressed

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -306,10 +306,7 @@ body {
 
 /* Disable scrolling when menu is open */
 body.menu-lock {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    overflow-y: scroll; /* Keep scrollbar visible */
+    overflow: hidden;
 }
 
 /* Hide hamburger icon when the screen is not narrow enough */
